Fix alignment on dropdown fields

--- a/src/sass/_common/common.scss
+++ b/src/sass/_common/common.scss
@@ -561,6 +561,8 @@ ul.bullet.gr-row > li {
 
     div.select {
         .select-dropdown {
+            display: flex;
+            align-items: center;
             text-transform: none;
         }
         ul.select-options {
